<resources>
    <string name="app_name">Breast_Cancer</string>
    <string name="start_button">Get Started</string>
    <string name="first_button">Get Started</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="pass">Password</string>
    <string name="mail_hint">please enter your email</string>
    <string name="pass_hint">please enter your password</string>
    <string name="create_acc">Crate Account</string>
    <string name="sign_up">Create Account</string>
    <string name="full_name_hint">please enter your name</string>
    <string name="Sign_up">Sign Up</string>
    <string name="home">Home</string>
    <string name="description1">
    Being aware of the early signs
    and symptoms of breast cancer
    can save your life.When the  disease
    is detected in its early stages,the range of
    treatments available is wider and more diverse,and the chances of a complete
    recovery are very high.
    </string>

    <string name="description2">
    Most lumps discovered in the breast
    are not malignant, however, the most
    common early sign of breast cancer
    in both women and men is the appearance of a lump or  thickening
    in the breast tissue.This lump is usually painless.
    </string>

    <string name="description3">
    Symptoms of breast cancer include the following:
    </string>
    <string name="description4">
    A clear or blood-like discharge
    from the nipple, sometimes with
    the appearance of a tumor in the breast.
    A retracted or indented nipple.
    A change in the size or shape of the breast.
    Flattening or indenting of the skin
    covering the breast.The appearance of redness or something
    similar to wrinkled  skin on the surface of the breast, like an orange peel.
     </string>
    <string name="for_doctor">For Doctor</string>
    <string name="ok">Start</string>
    <string name="capture_an_image_nor_nupload_a_photo">capture an image\nor\nUpload a photo</string>
    <string name="result">Result</string>
    <string name="benign">benign</string>
    <string name="congratulation">Congratulation</string>
    <string name="malignant">malignant</string>
    <string name="next">Next</string>
    <string name="awareness">For Patients Awareness</string>
    <string name="p1">Taking some steps to change your lifestyle can be an  effective factor in reducing your risk of breast cancer,</string>
    <string name="p2">Avoid drinking alcohol.</string>
    <string name="p3">Maintain a healthy weight.</string>
    <string name="p4">Avoid long-term hormone treatments.</string>
    <string name="p5">Exercise physical activity regularly.</string>
    <string name="p6">Eat foods rich in dietary fiber.</string>
    <string name="p7">Increase consumption of olive oil.</string>
    <string name="p8">Avoid exposure to pesticides.</string>
    <string name="update">Update</string>
    <string name="log_out">Log Out</string>
    <string name="delete_account">delete account</string>
    <string name="admin">Admin Panel</string>
    <string name="add_a_new_user">Add a new user</string>
    <string name="go_to_admin_panel">Go to Admin Panel</string>


</resources>