<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:background="@color/background"
     >

    <TextView
     android:layout_width="107dp"
     android:layout_height="44dp"
     android:text="@string/log_in"
     android:fontFamily="sans-serif-thin"
     android:textSize="30sp"
     android:textStyle="bold"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     android:layout_marginTop="50dp"
     android:layout_marginStart="28dp"
     android:textColor="@color/pink_dark"
     />

    <TextView
    android:layout_width="394dp"
    android:layout_height="29dp"
    android:text="Please log in to continue.. "
    android:fontFamily="monospace"
    android:textSize="18sp"
    android:textStyle="italic|normal"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    android:layout_marginTop="94dp"
    android:layout_marginStart="18dp"
    android:textColor="@color/pink_dark"
    />

    <ImageView
   android:layout_width="100dp"
   android:layout_height="100dp"
   android:layout_marginStart="150dp"
   android:layout_marginTop="130dp"
   android:src="@drawable/profile_ph"
   app:layout_constraintLeft_toLeftOf="parent"
   app:layout_constraintTop_toTopOf="parent"
   />

    <ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:src="@drawable/logo_ph"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    />

    <TextView
    android:id="@+id/mail"
    android:layout_width="107dp"
    android:layout_height="44dp"
    android:fontFamily="sans-serif"
    android:text="@string/email"
    android:textColor="@color/pink_dark"
    android:textSize="30sp"
    android:textStyle="bold"
    android:layout_marginStart="28dp"
    android:layout_marginTop="240dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

    <TextView
    android:id="@+id/pass"
    android:layout_width="150dp"
    android:layout_height="44dp"
    android:fontFamily="sans-serif"
    android:text="@string/pass"
    android:textColor="@color/pink_dark"
    android:textSize="30sp"
    android:textStyle="bold"
    android:layout_marginStart="28dp"
    android:layout_marginTop="380dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

<com.google.android.material.textfield.TextInputLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
    app:layout_constraintTop_toBottomOf="@+id/mail"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginTop="10dp"
    android:hint="@string/mail_hint"
    app:endIconMode="clear_text"
    >

    <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/mail_field"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:inputType="textEmailAddress"
    android:background="@drawable/bacground_textfield"
    />

</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/pass_field"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
    app:layout_constraintTop_toBottomOf="@+id/pass"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginStart="40dp"
    android:layout_marginEnd="40dp"
    android:layout_marginTop="10dp"
    android:hint="@string/pass_hint"
    app:endIconMode="password_toggle"
    >

    <com.google.android.material.textfield.TextInputEditText
    android:id="@+id/password_field"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:inputType="textPassword"
    android:background="@drawable/bacground_textfield"
    />

</com.google.android.material.textfield.TextInputLayout>

    <Button
    android:id="@+id/log_in_btn"
    android:layout_width="180dp"
    android:layout_height="60dp"
    android:text="@string/log_in"
    android:textColor="@color/pink_dark"
    android:textSize="20sp"
    tools:ignore="MissingConstraints"
    android:backgroundTint="@color/white"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/pass_field"
    android:layout_marginStart="20dp"
    android:layout_marginTop="300dp"
    />

    <Button
   android:id="@+id/create_acc_btn"
   android:layout_width="180dp"
   android:layout_height="60dp"
   android:text="@string/create_acc"
   android:textColor="@color/pink_dark"
   android:textSize="20sp"
   tools:ignore="MissingConstraints"
   android:backgroundTint="@color/white"
   app:layout_constraintEnd_toEndOf="parent"
   app:layout_constraintTop_toBottomOf="@+id/pass_field"
   android:layout_marginTop="300dp"
   android:layout_marginEnd="20dp"
   />

</androidx.constraintlayout.widget.ConstraintLayout>