<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@color/background"
    >

    <TextView
    android:id="@+id/home_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/home"
    tools:ignore="MissingConstraints"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="110dp"
    android:textSize="48sp"
    android:textStyle="normal|bold"
    android:textColor="@color/pink"
    />



    <ImageView
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:src="@drawable/logo2"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    android:layout_marginTop="10dp"
    android:layout_marginEnd="10dp"
    tools:ignore="ContentDescription"
    />

    <TextView
    android:id="@+id/des1"
    android:layout_width="380dp"
    android:layout_height="110dp"
    tools:ignore="MissingConstraints"
    android:textSize="18sp"
    android:textStyle="normal"
    android:textColor="@color/pink"
    android:layout_marginTop="10dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    app:layout_constraintTop_toBottomOf="@+id/home_tv"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/description1"
    />

    <TextView
    android:id="@+id/des2"
    android:layout_width="380dp"
    android:layout_height="110dp"
    tools:ignore="MissingConstraints"
    android:textSize="18sp"
    android:textStyle="normal"
    android:textColor="@color/pink"
    android:layout_marginTop="10dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    app:layout_constraintTop_toBottomOf="@+id/des1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/description2"
    />

    <TextView
    android:id="@+id/des3"
    android:layout_width="380dp"
    android:layout_height="50dp"
    tools:ignore="MissingConstraints"
    android:textSize="18sp"
    android:textStyle="normal"
    android:textColor="@color/pink"
    android:layout_marginTop="10dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    app:layout_constraintTop_toBottomOf="@+id/des2"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/description3"
    />

    <TextView
    android:id="@+id/des4"
    android:layout_width="380dp"
    android:layout_height="180dp"
    tools:ignore="MissingConstraints"
    android:textSize="18sp"
    android:textStyle="normal"
    android:textColor="@color/pink"
    android:layout_marginTop="10dp"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    app:layout_constraintTop_toBottomOf="@+id/des3"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="@string/description4"
    />

    <TextView
    android:layout_width="300dp"
    android:layout_height="70dp"
    app:layout_constraintTop_toBottomOf="@+id/des4"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="150dp"
    android:background="@drawable/background_home_icons"
    />

    <ImageView
    android:id="@+id/home_icon"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:src="@drawable/home_img"
    app:layout_constraintTop_toBottomOf="@+id/des4"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="165dp"
    android:layout_marginStart="80dp"
    tools:ignore="ContentDescription"
    />

    <ImageView
    android:id="@+id/doc_icon"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:src="@drawable/doc_img"
    app:layout_constraintTop_toBottomOf="@+id/des4"
    app:layout_constraintStart_toStartOf="@+id/home_icon"
    android:layout_marginTop="165dp"
    android:layout_marginStart="100dp"
    tools:ignore="ContentDescription"
    />

    <ImageView
    android:id="@+id/profile_icon"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:src="@drawable/profile_img"
    app:layout_constraintTop_toBottomOf="@+id/des4"
    app:layout_constraintStart_toStartOf="@+id/doc_icon"
    android:layout_marginTop="165dp"
    android:layout_marginStart="100dp"
    tools:ignore="ContentDescription"
    />

</androidx.constraintlayout.widget.ConstraintLayout>