<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanActivity"
    android:background="#FBD5DF"
    >

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        tools:ignore="ContentDescription"
        />

    <TextView
        android:id="@+id/doc_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/for_doctor"
        tools:ignore="MissingConstraints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="110dp"
        android:textSize="48sp"
        android:textStyle="normal|bold"
        android:textColor="@color/pink"
        />

   <ImageView
       android:id="@+id/upload_area"
       android:layout_width="350dp"
       android:layout_height="350dp"
       android:src="@drawable/drop_icon"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toBottomOf="@+id/doc_tv"
       android:layout_marginTop="20dp"
       android:layout_marginStart="30dp"
       />

    <TextView
        android:id="@+id/capture_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capture_an_image_nor_nupload_a_photo"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doc_tv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="130dp"
        />

    <Button
        android:id="@+id/start_btn"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="@string/ok"
        android:textSize="20sp"
        android:textColor="@color/pink"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_area"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"
        />

    <TextView
        android:layout_width="300dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@+id/start_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="120dp"
        android:background="@drawable/background_home_icons"
        />

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/home_img"
        app:layout_constraintTop_toBottomOf="@+id/start_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="135dp"
        android:layout_marginStart="80dp"
        tools:ignore="ContentDescription"
        />

    <ImageView
        android:id="@+id/doc_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/doc_img"
        app:layout_constraintTop_toBottomOf="@+id/start_btn"
        app:layout_constraintStart_toStartOf="@+id/home_icon"
        android:layout_marginTop="135dp"
        android:layout_marginStart="100dp"
        tools:ignore="ContentDescription"
        />

    <ImageView
        android:id="@+id/profile_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/profile_img"
        app:layout_constraintTop_toBottomOf="@+id/start_btn"
        app:layout_constraintStart_toStartOf="@+id/doc_icon"
        android:layout_marginTop="135dp"
        android:layout_marginStart="100dp"
        tools:ignore="ContentDescription"
        />

    <!--
    <Button
        android:id="@+id/test_btn"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:text="test"
        android:textSize="20sp"
        android:textColor="@color/pink"
        tools:ignore="MissingConstraints"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_area"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />
-->
</androidx.constraintlayout.widget.ConstraintLayout>


